# bagtracker

./: .gitignore  .pre-commit-config.yaml  CLAUDE.md  README.md  alembic.ini  docker-compose.yml  pyproject.toml  sample.env  uvicorn_config.py
backend/: application.py  asgi.py  dependencies.py  errors.py  scheduler.py  settings.py  taskiq_broker.py  tasks.py  validators.py
backend/alembic/: env.py  script.py.mako
backend/alembic/versions/: 35d2f14fbc45_add_telegram_fields.py  3ed618a58194_init_schema.py  49e3ea42b1b6_init_schema.py  58c2ab558884_init_schema.py  6a25ca2a49ad_init_schema.py  6c914201aa32_init_migration.py  844e776205de_add_telegram_fields.py  90c6fb778389_init_schema.py  93f2ccce35b8_init_schema.py  96f4753acdb3_init_schema.py  a96f6aeb406a_init_schema.py  af516e210d94_init_migration.py  afe85e71e692_partial_unique_index.py  b0a45d5d7934_init_schema.py  b1423ae03e75_init_migration.py  bd4fc41192b1_init_migration.py  c20f7b1915f5_init_schema.py  c89865e4f1a7_init_schema.py  e5cdac811933_init_schema.py  e967eda8214a_init_schema.py
backend/databases/: __init__.py  base.py  factory.py  factory_async.py  mariadb.py  postgres.py  redis.py
backend/databases/models/: __init__.py  balance.py  base.py  chain.py  portfolio.py  wallet.py
backend/managers/: __init__.py  auth.py  balance.py  balance_history.py  base_crud.py  chains.py  eth.py  healthcheck.py  portfolio.py  rpcs.py  tokens.py  transactions.py  users.py  wallet_address.py  wallets.py
backend/providers/: eth.py  etherscan.py  tokens.py
backend/routers/: __init__.py  auth.py  balance.py  chains.py  eth.py  healthcheck.py  info.py  portfolio.py  rpcs.py  tokens.py  transactions.py  users.py  wallets.py
backend/schemas/: __init__.py  auth.py  balance.py  balances.py  base.py  chains.py  healthcheck.py  portfolio.py  rpcs.py  tokens.py  transaction.py  transactions.py  user.py  users.py  wallet.py  wallet_address.py  wallets.py
backend/security/: encryption.py  jwt.py  password.py  telegram.py
backend/seeds/: seed.py
backend/seeds/data/: chains.py  exchanges.py  tokens.py
backend/services/: __init__.py  balance_calculator.py  evm_transaction_sync.py
docker/app/: Dockerfile
docs/: TASKIQ_TASKS.md
scripts/: extract_version.py  generate_encryption_key.py  rotate_encryption_keys.py  update_openapi_assets.py  verify_uvicorn_config.py
tests/: README.md  conftest.py  test_managers_balance.py  test_managers_portfolio.py  test_managers_transaction.py  test_managers_user.py  test_managers_wallet.py  test_models.py  test_service_balance_calculator.py
tests/test_managers/: test_balance.py  test_base_crud.py  test_transactions.py  test_users.py  test_wallets.py
tests/test_models/: test_base.py
