[project]
name = "bagtracker"
version = "0.0.12"
description = "Bag Tracker. Track Your Bags. Embrace the Rekt."
authors = ["Mihail Tayrov <mtayrov@gmail.com>"]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "alembic>=1.17.0",
    "uvicorn>=0.37.0",
    "fastapi[standard]>=0.118.3",
    "pydantic-settings>=2.11.0",
    "loguru>=0.7.3",
    "passlib[argon2]>=1.7.4",
    "python-jose[cryptography]>=3.5.0",
    "cryptography>=46.0.2",
    "psycopg[binary]>=3.2.10",
    "asyncpg>=0.30.0",
    "requests>=2.32.5",
    "sqlalchemy[asyncio]>=2.0.44",
    "redis==5.3.1",
    "web3>=7.13.0",
    "pytest-asyncio>=1.3.0",
]

[tool.ruff]

exclude = [
    "__init__.py",
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".git-rewrite",
    ".hg",
    ".ipynb_checkpoints",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".pyenv",
    ".pytest_cache",
    ".pytype",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    ".vscode",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "site-packages",
    "venv"
]

extend-exclude = ["tests", ".eggs"]

line-length = 120
indent-width = 4

[tool.ruff.format]
quote-style = "double"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "SIM", "UP"]
ignore = ["UP046", "B008"]

[dependency-groups]
dev = [
    "pre-commit>=4.3.0",
    "ruff>=0.14.0",
    "pytest>=8.4.2",
]
